--- a/src/Component/login/styles.css
+++ b/src/Component/login/styles.css
@@ -35,7 +35,10 @@
                       height: 100vh; 
                   }
                   
+                  h2 {
+                    margin-top: 50;
 
+                  }
 
 
                   /*
